------------------------------------------------------------------------------
This file is used to record changes made to the CVS database. Please add to
the top of this file before committing any changes.

Al
------------------------------------------------------------------------------
Tue Jul 20 17:34 BST 1999   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Fix to exec time memory allocation by Greg.

Thu Jul 15 22:17 CEST 1999  Arnaud Launay  <zoro@multimania.com>

	* Updates to the french faq, and added the japanese faq.

Thu Jul 15 14:14 BST 1999   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Final updates for 0.0.78

Wed Jul 14 18:32 BST 1999   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Many changes to tty code to correct various aspects of behavoir
	  by Al Riddoch and Greg Haerr.

Wed Jul 14 18:28 BST 1999   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Update and recode of direct console driver, adding more ansi
	  support, and BEL, by Greg Haerr.

Wed Jul 14 18:21 BST 1999   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Change to chq_peekch() which fixes select() behavoir for zero
	  bytes.

Wed Jul 14 18:21 BST 1999   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Fix to sched.[ch] which was messing up .o file sizes by Greg Haerr.

Wed Jul 14 18:17 BST 1999   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Updates to memory allocation code by Greg Haerr which fixes
	  environment truncation and brk() bug.

Fri Jul 09 17:00 BST 1999   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Major updates to socket code. Addition of server socket capability,
	  and addition of unix domain socket code (currently no functional),
	  plus nano sockets.

Fri Jul 09 16:59 BST 1999   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Late commit of changes for version 0.0.77 due to cvs outage.

Fri Jul 09 16:54 BST 1999   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Added support for very basic pseudo ttys. Initially to
	  support terminal program for nano-X.
