@@ -12,6 +12,7 @@
 #include <linuxmt/signal.h>
 #include <linuxmt/errno.h>
 #include <linuxmt/wait.h>
+#include <linuxmt/debug.h>
 
 #include <arch/segment.h>
 
@@ -174,10 +175,10 @@ static void handle_signal(signr, sa)
 unsigned signr;
 struct sigaction *sa;
 {
-	printk("Setting up return stack for sig handler %x.\n", sa->sa_handler);
-	printk("Stack at %x\n", current->t_regs.sp);
+	printd_sig1("Setting up return stack for sig handler %x.\n", sa->sa_handler);
+	printd_sig1("Stack at %x\n", current->t_regs.sp);
 	arch_setup_sighandler_stack(current, sa->sa_handler, signr);
-	printk("Stack at %x\n", current->t_regs.sp);
+	printd_sig1("Stack at %x\n", current->t_regs.sp);
 	sa->sa_handler = SIG_DFL;
 }
 
@@ -192,18 +193,18 @@ int do_signal()
 		if (signr == 32) {
 			panic("No signal set!\n");
 		}
-		printk("Process %d has signal %d.\n", currentp->pid, signr);
+		printd_sig2("Process %d has signal %d.\n", currentp->pid, signr);
 		sa = &currentp->sig.action[signr];
 		signr++;
 		if (sa->sa_handler == SIG_IGN) {
-			printk("Ignore\n");
+			printd_sig("Ignore\n");
 			if (signr != SIGCHLD)
 				continue;
 			while (sys_wait4(-1,NULL,WNOHANG) > 0);
 			continue;
 		}
 		if (sa->sa_handler == SIG_DFL) {
-			printk("Default\n");
+			printd_sig("Default\n");
 			if (currentp->pid == 1)
 				continue;
 			switch (signr) {
